@@ -2,11 +2,11 @@ package pl.ks.viewer;
 
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import pl.ks.jfr.parser.JfrParsedFile;
 import pl.ks.jfr.parser.JfrParser;
@@ -17,11 +17,22 @@ class StatefulJfrViewerService {
 
     private final JfrParser jfrParser;
 
+    List<StatefulJfrFile> getFiles() {
+        return parsedFiles.entrySet().stream()
+                .sorted(Comparator.comparing(o -> o.getValue().getParseStartDate()))
+                .map(entry -> StatefulJfrFile.builder()
+                        .id(entry.getKey())
+                        .parseStartDate(entry.getValue().getParseStartDate())
+                        .filenames(entry.getValue().getFilenames())
+                        .build()
+                )
+                .toList();
+    }
     UUID parseNewFiles(List<String> files) {
         UUID uuid = UUID.randomUUID();
         List<Path> paths = files.stream()
                 .map(Paths::get)
-                .collect(Collectors.toList());
+                .toList();
 
         JfrParsedFile parsedFile = jfrParser.parse(paths);
         parsedFiles.put(uuid, parsedFile);
